Removed duplicate folders
Removed duplicate folders (lessons and users)

--- a/online_school/lessons/templates/lessons/lessons.html
+++ b/online_school/lessons/templates/lessons/lessons.html
@@ -33,7 +33,7 @@
     {% endfor %}
 
 </table>
-<img src="{% static 'lessons/images/math04.png' %}" alt="">
+<img src="{% static 'lessons/images/math03.jpg' %}" alt="">
 
 </body>
 </html>
