Create forms styles
Create forms styles

--- a/online_school/form_app/templates/form_app/add_student.html
+++ b/online_school/form_app/templates/form_app/add_student.html
@@ -2,7 +2,7 @@
 {% block title %}Додати вчителя{% endblock %}
 
 {% block content %}
-Форма для додавання учнів
+<h1>Форма для додавання учнів</h1>
 
 <form method="post" action="">
     {% csrf_token %}
