--- a/online_school/form_app/templates/form_app/add_subject.html
+++ b/online_school/form_app/templates/form_app/add_subject.html
@@ -2,7 +2,7 @@
 {% block title %}Додати вчителя{% endblock %}
 
 {% block content %}
-Форма для додавання предметів
+<h1>Форма для додавання предметів</h1>
 
 <form method="post" action="">
     {% csrf_token %}
