--- a/online_school/form_app/templates/form_app/base_form.html
+++ b/online_school/form_app/templates/form_app/base_form.html
@@ -1,3 +1,5 @@
+{%  load static %}
+
 <!doctype html>
 <html lang="uk-Uk">
 <head>
@@ -5,10 +7,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'form_app/styles/add_data.css' %}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
         {% block content %}
         {% endblock %}
+        <img src="{% static 'form_app/images/logo.jpg' %}" alt="">
 </body>
 </html>
