--- a/online_school/lessons/templates/lessons/index.html
+++ b/online_school/lessons/templates/lessons/index.html
@@ -1,30 +1,41 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ua">
 <head>
     <meta charset="UTF-8">
-    <title>Головна сторінка</title>
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'lessons/styles/index_style.css' %}">
 </head>
-
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #ddd;
-}
-</style>
 
 <body>
 
+{% block mainmenu %}
+<ul class="mainmenu">
+{% for m in menu %}
+    <li><a href="{% url m.url_name %}">{{ m.title }}</a></li>
+{% endfor %}
+</ul>
+{% endblock mainmenu %}
+
+<div class="layout">
+
+    <!-- ЛІВЕ МЕНЮ -->
+    <aside class="sidebar">
+        <ul>
+            <li><a href="{% url 'lessons' %}">Уроки</a></li>
+            <li><a href="{% url 'teachers' %}">Вчителі</a></li>
+            <li><a href="{% url 'students' %}">Учні</a></li>
+            <li><a href="{% url 'subjects' %}">Предмети</a></li>
+        </ul>
+    </aside>
+
+    <!-- КОНТЕНТ -->
+    <div class="content">
+        {% block page %}
+        {% endblock page %}
+    </div>
+
+</div>
+
 </body>
 </html>
-
