--- a/online_school/lessons/templates/lessons/students.html
+++ b/online_school/lessons/templates/lessons/students.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html>
-<html lang="ua">
-<head>
-    <meta charset="UTF-8">
-    <title>Учні</title>
-</head>
+{% extends 'lessons/index.html' %}
+{% block title %}Учні{% endblock %}
 
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+{% block page %}
 
-td, th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #ddd;
-}
-</style>
-
-<body>
 <h1>
     Учні
 </h1>
 <table>
     <tr>
-        <td>ID</td>
         <td>Прізвище</td>
         <td>Ім'я</td>
         <td>Побатькові</td>
@@ -38,7 +16,6 @@ tr:nth-child(even) {
     </tr>
     {% for student in students %}
     <tr>
-        <td>{{student.id}}</td>
         <td>{{student.last_name}}</td>
         <td>{{student.first_name}}</td>
         <td>{{student.patronymic}}</td>
@@ -49,7 +26,6 @@ tr:nth-child(even) {
     {% endfor %}
 
 </table>
+{% endblock page %}
 
-</body>
-</html>
 
