--- a/online_school/lessons/templates/lessons/subjects.html
+++ b/online_school/lessons/templates/lessons/subjects.html
@@ -1,40 +1,17 @@
-<!DOCTYPE html>
-<html lang="ua">
-<head>
-    <meta charset="UTF-8">
-    <title>Предмети</title>
-</head>
+{% extends 'lessons/index.html' %}
+{% block title %}Предмети{% endblock %}
 
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+{% block page %}
 
-td, th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #ddd;
-}
-</style>
-
-<body>
 <h1>
-    Предмети
+Предмети
 </h1>
 <table>
     <tr>
-        <td>ID</td>
         <td>Предмет</td>
     </tr>
     {% for subject in subjects %}
     <tr>
-        <td>{{subject.id}}</td>
         <td>{{subject.name}}</td>
 
     </tr>
@@ -42,7 +19,4 @@ tr:nth-child(even) {
     {% endfor %}
 
 </table>
-
-</body>
-</html>
-
+{% endblock page %}
