--- a/online_school/lessons/templates/lessons/teachers.html
+++ b/online_school/lessons/templates/lessons/teachers.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html>
-<html lang="ua">
-<head>
-    <meta charset="UTF-8">
-    <title>Вчителя</title>
-</head>
+{% extends 'lessons/index.html' %}
+{% block title %}Вчителя{% endblock %}
 
-<style>
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
+{% block page %}
 
-td, th {
-  border: 1px solid #ddd;
-  text-align: left;
-  padding: 8px;
-}
-
-tr:nth-child(even) {
-  background-color: #ddd;
-}
-</style>
-
-<body>
 <h1>
     Вчителя
 </h1>
 <table>
     <tr>
-        <td>ID</td>
         <td>Прізвище</td>
         <td>Ім'я</td>
         <td>Побатькові</td>
@@ -37,7 +15,6 @@ tr:nth-child(even) {
     </tr>
     {% for teacher in teachers %}
     <tr>
-        <td>{{teacher.id}}</td>
         <td>{{teacher.last_name}}</td>
         <td>{{teacher.first_name}}</td>
         <td>{{teacher.patronymic}}</td>
@@ -47,7 +24,8 @@ tr:nth-child(even) {
     {% endfor %}
 
 </table>
+{% endblock page %}
 
-</body>
-</html>
+
+
 
