Changed the menu
Changed the menu

--- a/online_school/lessons/templates/lessons/index.html
+++ b/online_school/lessons/templates/lessons/index.html
@@ -22,10 +22,10 @@
     <!-- ЛІВЕ МЕНЮ -->
     <aside class="sidebar">
         <ul>
-            <li><a href="{% url 'lessons' %}">Уроки</a></li>
-            <li><a href="{% url 'teachers' %}">Вчителі</a></li>
-            <li><a href="{% url 'students' %}">Учні</a></li>
-            <li><a href="{% url 'subjects' %}">Предмети</a></li>
+            <li><a href="{% url 'lessons:lessons' %}">Уроки</a></li>
+            <li><a href="{% url 'lessons:teachers' %}">Вчителі</a></li>
+            <li><a href="{% url 'lessons:students' %}">Учні</a></li>
+            <li><a href="{% url 'lessons:subjects' %}">Предмети</a></li>
         </ul>
     </aside>
 
